correcciones tutor agus

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </div>
         <nav>
             <ul>
-                <li>Disney +</li>
-                <li>Star +</li>
+                <li><a href="ruta/ruta">Disney +</a></li>
+                <li><a href="ruta/ruta">Star +</a></li>
                 <li>Novedades</li>
                 <li>Películas</li>
                 <li>Disney 100</li>
